# marbles

./: .clangd  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_ramp.gpmesh  build.ninja  camera.h  cmake_install.cmake  compile_commands.json  entities.cpp  entities.h  game.cpp  game.h  gpmesh_export_v2.py  marbles.sln  marbles.slnx  marbles.vcxproj  marbles.vcxproj.filters  mesh.cpp  mesh.h  pch.h  physics.cpp  physics.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.h
.cmake/api/v1/reply/: cache-v2-dee1024bc06009d130e1.json  cmakeFiles-v1-cb11fd4975e346c63bd7.json  codemodel-v2-60e1ddf2dd0b8c02ebb8.json  index-2026-03-11T14-17-12-0715.json  target-marbles-Debug-5efb7faf2e3def50a7ce.json
assets/: basic_ramp.gpmesh  big_ramp1.gpmesh  canon1.gpmesh  plane1.gpmesh  plane2.gpmesh  plane3.gpmesh  plane4.gpmesh  plane5.gpmesh  plane6.gpmesh  snake1.gpmesh  sphere.gpmesh  twist.gpmesh  twist2.gpmesh
dlls_x64/: dlls_x64.manifest
lib/OpenGL/: glew.h
shaders/: basic.frag  basic.vert  post.frag  post.vert  skybox.frag  skybox.vert  tint.frag  wireframe.frag  wireframe.vert
tmpl8/: surface.cpp  surface.h  template.cpp  template.h
